5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4428/executions/1679_1107.log
== TEST (2019-05-02 14:12:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x = int(input("Dia da semana: "))

if(x > 6):
	print("A entrada", x, "nao eh valida")
-- OUTPUT:
A entrada 9 nao eh valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:16:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x = int(input("Dia da semana: "))

domingo = 0
segunda = 1
terca = 2
quarta = 3
quinta = 4
sexta = 5
sabado = 6

if(x > 6):
	print("A entrada", x, "nao eh valida")
else:
	print("Hoje eh", x)
else

-- ERROR:
File "XXXX", line 19
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:17:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x = int(input("Dia da semana: "))

domingo = 0
segunda = 1
terca = 2
quarta = 3
quinta = 4
sexta = 5
sabado = 6

if(x > 6):
	print("A entrada", x, "nao eh valida")
else:
	print("Hoje eh", x)


-- OUTPUT:
A entrada 9 nao eh valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:18:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x = int(input("Dia da semana: "))

0 = domingo
segunda = 1
terca = 2
quarta = 3
quinta = 4
sexta = 5
sabado = 6

if(x > 6):
	print("A entrada", x, "nao eh valida")
else:
	print("Hoje eh", x)


-- ERROR:
File "XXXX", line 7
    0 = domingo
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:32:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x = int(input("Dia da semana: "))
terca = 2
quarta = 3
quinta = 4
sexta = 5
sabado = 6

if(x > 6):
	print("A entrada", x, "nao eh valida")
elif(x == 0)
	print("Hoje eh domingo")


-- ERROR:
File "XXXX", line 14
    elif(x == 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:32:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x = int(input("Dia da semana: "))
terca = 2
quarta = 3
quinta = 4
sexta = 5
sabado = 6

if(x > 6):
	print("A entrada", x, "nao eh valida")
elif(x == 0):
	print("Hoje eh domingo")


-- OUTPUT:
A entrada 9 nao eh valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
